[package]
name = "bruise_onion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rsa = { version = "0.9.6", features = ["sha2"] }
rand = "0.8.5"
bincode = "1.3"
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.21"
generic-array = "0.14"
sha2 = "0.10.8"

tokio = { version = "1", features = ["full"] }