[package]
name = "bruise_onion"
version = "0.1.0"
edition = "2021"

[lib]
name = "bruise_onion"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server_key_gen"
path = "src/server_key_gen.rs"

[dependencies]
rand_core = "0.6.4"
rand = "0.8"
bincode = "1.3"
#aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.21"
generic-array = "0.14"
sha2 = "0.10.8"
chrono = "0.4"
log = "0.4"
hex = "0.4" 
env_logger = "0.10"
ed25519-dalek = "1.0"
x25519-dalek = "2.0.0-rc.3"
tokio = { version = "1", features = ["full"] }